Solved image problem for station 1

--- a/templates/Main.html
+++ b/templates/Main.html
@@ -1,4 +1,4 @@
-{% extends 'Base.html' %} {% block body %}
+{% extends 'Base.html' %} {% block body %}="/static/OutputImages/cam1output/cam1_bmp.bmp?v=175923296006
 <style>
   html {
     padding: 0;
