Stable code for 4 stations, delay needs to be added

--- a/templates/partsettings.html
+++ b/templates/partsettings.html
@@ -589,7 +589,7 @@
 
 
                              <div class="inputs">
-                            <label for="max_circularity3">min_circularity:</label>
+                            <label for="max_circularity3">max_circularity:</label>
                             <input type="text" id="max_circularity3" name="max_circularity3" oninput="ValidateNumber(event)">
                         </div>
 
